third_party/WebKit/Source/WebCore/html/HTMLOptGroupElement.h
@@ -35,6 +35,7 @@ class HTMLOptGroupElement : public HTMLElement {
 public:
     static PassRefPtr<HTMLOptGroupElement> create(const QualifiedName&, Document*);
 
+    virtual bool disabled() const OVERRIDE;
     HTMLSelectElement* ownerSelectElement() const;
     
     String groupLabelText() const;
@@ -45,6 +46,7 @@ private:
     virtual const AtomicString& formControlType() const;
     virtual bool supportsFocus() const;
     virtual bool isFocusable() const;
+    virtual bool isEnabledFormControl() const OVERRIDE { return !disabled(); }
     virtual void parseAttribute(const Attribute&) OVERRIDE;
     virtual bool rendererIsNeeded(const NodeRenderingContext&) { return false; }
     virtual void attach();
